--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "redis": "^5.8.3",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "zod": "^4.1.12"
   }
 }
