--- a/messageBackup/package.json
+++ b/messageBackup/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"tsc",
-    "start":"node dist/index.js"
+    "build": "tsc",
+    "start": "node dist/index.js && node dist/worker.js"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +16,12 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.5",
     "@types/mongoose": "^5.11.96",
     "@types/redis": "^4.0.10",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.2",
